<?xml version="1.0"?>
<package format="2">
    <name>depthvista_camera</name>
    <version>1.0.1</version>
    <description>DepthVista Camera package allowing access to e-con systems DepthVista camera module</description>
    <maintainer email="support@e-consystems.com">e-con Systems</maintainer>

    <url type="website">https://www.e-consystems.com/</url>
	<license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rosconsole</depend>
	<depend>image_transport</depend>
	<depend>cv_bridge</depend>
	<depend>nodelet</depend>
	<depend>message_runtime</depend>
	<depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>dynamic_reconfigure</depend>
	<depend>depthvista</depend>

    <export>
         <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>

<!--
-->
